Fixed bugs in mmio.cpp, rhoso1ion.pl and Makefile for threading in Linux.
Fixed bug in reading in saved matrix files in ic1ion (mmio.cpp).
Fixed bug in dealing with imaginary eigenvectors in rhoso1ion.pl
Added -lpthread to Makefile for linking mcphasit and anisotropyit
Added extra options for intel C compiler -fma and -flatcc

--- a/bin/ic1ion_module/Makefile
+++ b/bin/ic1ion_module/Makefile
@@ -86,7 +86,7 @@ endif
 #------------------------------    FAST    --------------------------------------#
 ifdef fast
 ifdef icc
-CFLAGS+= -xHOST
+CFLAGS+= -xHOST -O2 -IPF_fma -long_double -IPF_fltacc#-ipo
 else
 ifdef GCC42
 CFLAGS+= -pipe -O2 -march=native
