--- a/bin/bfk/Makefile
+++ b/bin/bfk/Makefile
@@ -17,13 +17,14 @@ ifdef WINDOWS
 EXE=.exe
 endif
 
-all :  clean ../bfk$(EXE) ../chibfk$(EXE) 
+all :  clean ../bfk$(EXE) 
+#../chibfk$(EXE) 
 
 ../bfk$(EXE): bfk.f95
 	gfortran -static -lgfortran -o ../bfk $^ 
 
-../chibfk$(EXE): chibfk.f95
-	gfortran -static -lgfortran -o ../chibfk $^ 
+#../chibfk$(EXE): chibfk.f95
+#	gfortran -static -lgfortran -o ../chibfk $^ 
 
 clean:
 	rm -vf ./*.o commondata.mod matrixelements.mod
