mcdispi_intcalc loops singificantly simplified - even more

--- a/bin/src/Makefile
+++ b/bin/src/Makefile
@@ -213,8 +213,8 @@ anisotropy.o: anisotropy.c $(INCL) mcphas_htcalc.c mcphas_fecalc.c mcphas_physpr
 # .... threading does not work yet
 
 mcdisp.o: mcdisp.c  myev.c mcdisp_intcalc.c mcdisp_output.c jq.hpp mdcf.hpp trs_io.c $(INCL)
-#	$(CCC) $(CFLAGS)  $<
-	$(CCC) $(CFLAGS) $(THREADFLAG) $<
+	$(CCC) $(CFLAGS)  $<
+#	$(CCC) $(CFLAGS) $(THREADFLAG) $<
 # .... threading does not work yet ? keep it in test stage ...
 
 cond.o: cond.c paramete.hpp martin.h
