--- a/doc/mcphas.ini
+++ b/doc/mcphas.ini
@@ -83,6 +83,9 @@ nofrndtries=5
 
 [PARAMETERS FOR SUB FECALC SELFCONSISTENCY PROCESS]
 
+# (optional) number of parallel threads on your machine
+#  (if not set program will attempt to determine this automatically)
+# nofthreads=2
 
 # maximum number of selfconsistency loops
 maxnofmfloops=1000
