linker options updated minor changes to many files to eliminate warnings

--- a/bin/cf1ion_module/Makefile
+++ b/bin/cf1ion_module/Makefile
@@ -77,7 +77,7 @@ so1ion.o: types.c main.c
 cfieldrout.o: cfieldrout.c $(CFOBJS) 
 
 cfield.so: module.o cfield.o  $(VECOBJS) $(CFOBJS) 
-	$(CCC) $(CCOPTS) -Wall -o cfield.so $^ -shared $(LFLAGS)
+	$(CCC) $(CCOPTS) -Wall -o cfield.so $^ -shared -L../ic1ion_module/libs -llapack -lblas -lgfortran
 
 ../cfield$(EXE): cfield.o $(CFOBJS)
 	$(CCC) $(CCOPTS) -Wall -o ../cfield $^ $(LFLAGS)
