Changed cluster module to use sparse matrices internally to save memory.

--- a/bin/cf1ion_module/Makefile
+++ b/bin/cf1ion_module/Makefile
@@ -37,6 +37,7 @@ INCLUDE= ../../include
 
 INCLDIRS =      -I. \
 		-I../include \
+		-I../ic1ion_module \
 		-I/usr/include/readline \
 		-I/local/lib  \
 		-I/usr/X11R6/include
