some changes to compile on mac

--- a/bin/src/Makefile.common
+++ b/bin/src/Makefile.common
@@ -171,3 +171,6 @@ endif
 ###########################################################################
 #  LIBFLEX
 LIBL= /usr/lib/libfl.a
+
+
+CCOPTS+= -std=c++11
