module phonon energy correction term added to Icalc

--- a/bin/cowan/Makefile
+++ b/bin/cowan/Makefile
@@ -22,20 +22,21 @@ EXE=.exe
 STATIC=-static
 endif
 
-all :  clean ../RCN2K$(EXE) ../RCN36K$(EXE) ../RCG11K$(EXE) 
+all :  clean  ../RCN36K$(EXE) ../RCN2K$(EXE)
+# ../RCG11K$(EXE)   not needed
 #../chibfk$(EXE) 
 
-../RCN2K$(EXE): RCN2K.F
+ ../RCN2K$(EXE): RCN2K.F
 	gfortran $(STATIC) -lgfortran -o ../RCN2K $^ 
 
 ../RCN36K$(EXE): RCN36K.F
 	gfortran $(STATIC) -lgfortran -o ../RCN36K $^ 
 
-../RCG11K$(EXE): RCG11K.F
-	gfortran $(STATIC) -lgfortran -o ../RCG11K $^ 
+#../RCG11K$(EXE): RCG11K.F
+#	gfortran $(STATIC) -lgfortran -o ../RCG11K $^ 
 
 #../chibfk$(EXE): chibfk.f95
 #	gfortran -static -lgfortran -o ../chibfk $^ 
 
 clean:
-	rm -vf ./*.o 
+	rm -vf ./*.o
